<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Capital</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!--<string name="SENDER_ID">348769075499</string>-->
    <string name="SENDER_ID">842609580641</string>
    <string name="google_tacker_Id">UA-63682155-1</string>
    <string name="contact_us">(+61 3) 9348 3333</string>
    <string name="about_us">http://www.capitalradiology.com.au/page/our-history</string>
    <string name="sign_in_trouble_url">http://www.capitalradiology.com.au/page/general-enquiries-and-feedback</string>

    <string name="time_out_error">Time out, Please try again.</string>
    <string name="no_internet_error">Please check your internet connection</string>
    <string name="other_error">Sorry, but we\'re having communication issues back home</string>

    <string name="get_started">GET STARTED</string>
    <string name="splash_title_better_outcomes">Better Patient Outcomes</string>
    <string name="key_title">KEY_TITLE</string>
    <string name="key_url">KEY_URL</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_trouble_text">Sign In Trouble</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="terms_of_services_text">Terms of services</string>
    <string name="sign_up">SIGN UP</string>
    <string name="slider_1_header_text">Live Longer</string>
    <string name="slider_1_secondary_text">Connect and communicate to improve your health</string>
    <string name="slider_2_header_text">Secure Patient Access</string>
    <string name="slider_2_secondary_text">Request an appointment, view your scans, reports and more</string>
    <string name="slider_3_header_text">Better Patient Outcomes</string>
    <string name="slider_3_secondary_text">Faster, more accurate and more accessible imaging</string>
    <string name="slider_4_header_text">Healthcare tailored to you</string>
    <string name="slider_4_secondary_text">Delivering advanced treatments</string>
    <string name="option_intro_question">Tell us a bit about yourself.\n(Just 4 quick questions)</string>
    <string name="lets_go">LET\'S GO!</string>
    <string name="maybe_later">MAYBE LATER</string>
    <string name="drawer_more">MORE</string>
    <string name="drawer_care">CARE</string>
    <string name="drawer_care_invite">Invite</string>
    <string name="drawer_care_switch">Switch Account</string>
    <string name="drawer_more_settings">Settings</string>
    <string name="drawer_more_about">About</string>
    <string name="drawer_version">Version 0.8.05</string>
    <string name="signin_trouble">Trouble signing in?</string>
    <string name="cancel">CANCEL</string>
    <string name="username">USERNAME</string>
    <string name="error_username">Username cannot be empty</string>
    <string name="error_password">Password cannot be empty</string>
    <string name="error_firstame">FirstName cannot be empty</string>
    <string name="error_lastname">LastName cannot be empty</string>
    <string name="error_empty_email">Email address cannot be empty</string>
    <string name="error_empty_phone">Phone cannot be empty</string>
    <string name="error_email">Email address is invalid</string>
    <string name="error_medicare_card">Please choose medicare card</string>
    <string name="error_terms">Kindly accept the Terms &amp; Conditions and Privacy Policy</string>
    <string name="error_title">Error</string>
    <string name="title_activity_sign_in">I agree to the <a href="terms:">Terms of Services</a> and the <a href="privacy:"></a>Privacy Policy</string>
    <string name="privacy_link">http://www.capitalradiology.com.au/page/privacy-policy-and-statement</string>
    <string name="select_gender">What is\nyour gender?</string>
    <string name="select_already_patient">Are you already a\nCapital Radiology Patient?</string>
    <string name="next">NEXT</string>
    <string name="select_dob">What is your birthday?</string>
    <string name="title_register">And finally, let\'s put a name to that information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOG IN</string>
    <string name="forgot_user_name_or_password">Forgot username or password?</string>
    <string name="register_here">Register <b>here</b> </string>
    <string name="View_terms_and_conditions">View terms and conditions <b>here</b> </string>
    <string name="phone">Phone</string>
    <string name="medicare_card">Medicare Card</string>
    <string name="refferal_doc">Referral Doc</string>
    <string name="all_done">ALL DONE!</string>
    <string name="drawer_sign_in">Sign In</string>
    <string name="drawer_empty_user">Hi</string>
    <string name="drawer_logout">Logout</string>

    <string name="Signup_Start">Signup Start</string>
    <string name="Signup_Gender">Signup Gender</string>
    <string name="Signup_DOB">Signup DOB</string>
    <string name="Signup_Register">Signup</string>

    <string name="PromoCode">Promo</string>
    <string name="Cost_Estimate">Cost Estimate</string>

    <string name="Signin">SignIn</string>
    <string name="Welcome">Welcome</string>

    <string name="dashboard">Dashboard</string>

    <string name="home_screen_name">Capital Radiology</string>
    <string name="location_name">Location List</string>
    <string name="location_detail">Location Detail</string>
    <string name="Pain_Mgmt_category">Pain Category</string>
    <string name="Pain_Mgmt_list">Pain Management</string>
    <string name="Pain_Mgmt_details">Pain Management Details</string>

    <string name="Procedure_list">Pain Management</string>
    <string name="Procedure_details">Pain Management Details</string>

    <string name="edit_profile">Edit Profile</string>

    <string name="procedure_name">Procedure</string>
    <string name="Radiologist_name">Radiologist</string>
    <string name="Radiologist_details">Radiologist Details</string>
    <string name="Health_Record">My Health Records</string>
    <string name="Request_Appointment">Request Appointment</string>
    <string name="Request_Appointment_chooseService">Request Appointment Choose Service</string>
    <string name="Request_Appointment_book">Book Appointment</string>
    <string name="Webview">Webview</string>

    <!-- <string name="home_item_title_1">My Health Records</string>
     <string name="home_item_title_2">Request Appointment</string>
     <string name="home_item_title_3">Location</string>
     <string name="home_item_title_4">Meet Your Radiologist</string>
     <string name="home_item_title_5">Understand Your Procedures</string>
     <string name="home_item_title_6">Pain Management</string>-->


    <string name="home_item_title_1">MAKE AN</string>
    <string name="home_item_title_2">CALL</string>
    <string name="home_item_title_3">MY</string>
    <string name="home_item_title_4">FIND A</string>
    <string name="home_item_title_5">PROCEDURES</string>
    <string name="home_item_title_6">PAIN</string>
    <string name="home_item_title_11">&#160;APPOINTMENT</string>
    <string name="home_item_title_22">&#160;CAPITAL</string>
    <string name="home_item_title_33">&#160;RECORDS</string>
    <string name="home_item_title_44">&#160;CLINIC</string>
    <string name="home_item_title_55">&#160;INFORMATION</string>
    <string name="home_item_title_66">&#160;MANAGEMENT</string>


    <string name="home_item_secondary">Secondary Text for all items</string>

    <string name="pain_title_1">Back Pain</string>
    <string name="pain_title_2">Chest Pain</string>
    <string name="pain_title_3">Knee Pain</string>
    <string name="pain_title_4">Feet Pain</string>

    <string name="procedure_title_1">Procedure 1</string>
    <string name="procedure_title_2">Procedure 2</string>
    <string name="procedure_title_3">Procedure 3</string>
    <string name="procedure_title_4">Procedure 4</string>

    <string name="radiologist_title_1">Dr. John Smith</string>
    <string name="degree_title_1">MD</string>
    <string name="radiologist_title_2">Dr. David Johnson</string>
    <string name="radiologist_title_3">Dr. Mark Warner</string>
    <string name="radiologist_title_4">Dr. Steve David</string>

    <string name="health_record_title_1">Record 1</string>
    <string name="health_record_title_2">Record 2</string>
    <string name="health_record_title_3">Record 3</string>
    <string name="health_record_title_4">Record 4</string>

    <string name="map">MAP</string>
    <string name="list">LIST</string>
    <string name="call">Call</string>

    <string-array name="time">
        <item>9:30am</item>
        <item>10:30am</item>
        <item>11:30am</item>
        <item>12:30pm</item>
        <item>2:30pm</item>
        <item>3:30pm</item>
        <item>4:30pm</item>
    </string-array>

    <string-array name="service_type">
        <item>X-Ray</item>
        <item>Ultrasound</item>
        <item>OPG</item>
        <item>Nuclear Medicine</item>
        <item>MRI</item>
        <item>Mammography</item>
        <item>Fluroscopy</item>
        <item>Echocardiography</item>
        <item>Doppler</item>
        <item>CT Angiography</item>
        <item>CT</item>
        <item>Bone Densitometry</item>
    </string-array>

</resources>
