<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img_backgroud"
     >

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_heart_male" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgUser"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text="@string/option_intro_question"
        android:textAppearance="?android:textAppearanceLarge" />

    <Button
        android:id="@+id/btnLetsGo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtMaybeLater"
        android:layout_marginBottom="20.0dip"
        android:layout_marginLeft="36.0dip"
        android:layout_marginRight="36.0dip"
        android:background="@color/button_background_white"
        android:text="@string/lets_go"
        android:textColor="@color/color_app_primary" />

    <TextView
        android:id="@+id/txtMaybeLater"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10.0dip"
        android:layout_marginLeft="36.0dip"
        android:layout_marginRight="36.0dip"
        android:gravity="center"
        android:text="@string/maybe_later"
        android:padding="10dp"
        android:textAllCaps="true"
        android:textColor="@color/white" />
</RelativeLayout>