<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img_backgroud"
    android:scrollbars="none"
    android:theme="@style/TextLabel" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48.0dip"
            android:layout_marginRight="48.0dip"
            android:layout_marginTop="-30.0dip"
            android:src="@drawable/capital_radiology_white" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_marginLeft="36.0dip"
            android:layout_marginRight="36.0dip"
            android:layout_marginTop="-20.0dip"
            android:theme="@style/TextLabel" >

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:inputType="textEmailAddress|textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputUsername"
            android:layout_marginLeft="36.0dip"
            android:layout_marginRight="36.0dip"
            android:theme="@style/TextLabel" >

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imgViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/inputPassword"
            android:layout_alignParentRight="true"
             android:layout_marginRight="40.0dip"
            android:padding="5dp"
            android:src="@android:drawable/ic_menu_view" />

        <LinearLayout
            android:id="@+id/layoutCheckbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputPassword"
            android:layout_marginLeft="36.0dip"
            android:layout_marginRight="36.0dip"
            android:layout_marginTop="15.0dip"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkTnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  />

            <TextView
                android:id="@+id/txtTnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingBottom="10.0dip"
                android:text="@string/title_activity_sign_in"
                android:textColorLink="@color/green_light"
                android:textColor="@color/button_background_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutCheckbox"
            android:layout_marginLeft="36.0dip"
            android:layout_marginRight="36.0dip"
            android:layout_marginTop="20.0dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:layout_weight="1.0"
                android:background="@color/button_background_white"
                android:text="@string/cancel"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1.0"
                android:background="@color/button_disabled_color"
                android:text="@string/sign_in"
                android:enabled="false"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtSigninTrouble"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutButtons"
            android:layout_marginBottom="20.0dip"
            android:layout_marginTop="60.0dip"
            android:gravity="center"
            android:text="@string/signin_trouble"
            android:textColor="@color/button_background_white" />
    </RelativeLayout>
</ScrollView>