<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img_backgroud"
    android:theme="@style/TextLabel">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36.0dip"
            android:layout_marginRight="36.0dip"
            android:layout_marginTop="20.0dip"
            android:gravity="center"
            android:text="@string/title_register"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/layoutInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnr_add_photo"
            android:layout_marginLeft="36.0dip"
            android:layout_marginRight="36.0dip"
            android:layout_marginTop="15.0dip"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputFirstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editFirstName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textCapWords"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editLastName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textCapWords"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@id/inputPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@id/editPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/imgViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/inputPassword"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:src="@android:drawable/ic_menu_view" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLength="12"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtMedicareCard"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/medicare_card"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/button_background_white" />

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <ImageView
                        android:id="@+id/imgMedicareCard"
                        android:layout_width="40.0dip"
                        android:layout_height="40.0dip"
                        android:layout_alignParentRight="true"
                        android:src="@android:drawable/ic_menu_camera" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@id/layoutCheckbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutInput"
            android:layout_marginLeft="36.0dip"
            android:layout_marginRight="36.0dip"
            android:layout_marginTop="15.0dip"
            android:orientation="horizontal">

            <CheckBox
                android:id="@id/checkTnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@id/txtTnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingBottom="10.0dip"
                android:text="@string/title_activity_sign_in"
                android:textColor="@color/white"
                android:textColorLink="@color/green_light" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutCheckbox"
            android:layout_marginBottom="20.0dip"
            android:layout_marginLeft="36.0dip"
            android:layout_marginRight="36.0dip"
            android:layout_marginTop="20.0dip"
            android:background="@color/button_disabled_color"
            android:enabled="false"
            android:text="@string/all_done"
            android:textColor="@color/black" />


        <LinearLayout
            android:id="@+id/lnr_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtRegister"
            android:layout_below="@+id/txtRegister"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/profile_min_placeholder" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/img_Profile"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="Add photo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>